Fix attribution on mobile, refresh

--- a/www.opensnowmap.org/mobile.css
+++ b/www.opensnowmap.org/mobile.css
@@ -85,7 +85,7 @@ hr.superlight{border: 0px; padding:0px; margin:0px 30px 0px 30px; width: 80%; he
 position: absolute;
 bottom: 1px;
 right:1px;
-font-size: 0.6em;
+font-size: 0.8em;
 font-weight:300;
 z-index: 1000;
 background-color: #F5F5F5;
